[gd_scene load_steps=8 format=2]

[ext_resource path="res://Piece.gd" type="Script" id=1]
[ext_resource path="res://assets/queen_w.png" type="Texture" id=2]
[ext_resource path="res://assets/Light-Free.png" type="Texture" id=3]
[ext_resource path="res://WhiteQueen.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 17.5 )

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( -17, 15, -22, 18, -22, 25, 22, 25, 22, 18, 17, 15, 17, 12, 27, -5, 29, -7, 29, -10, 27, -12, 24, -12, 22, -10, 21, -7, 8, 5, 12, -16, 16, -19, 16, -22, 13, -25, 9, -25, 6, -22, 6, -19, 8, -17, 0, -2, -8, -17, -6, -19, -6, -22, -9, -25, -13, -25, -16, -22, -16, -19, -12, -16, -7, 5, -21, -7, -21, -10, -24, -13, -27, -13, -29, -10, -29, -7, -27, -5, -17, 12 )

[sub_resource type="Curve" id=3]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0.104072, 196.202 ), 0.0, 1578.05, 0, 0, Vector2( 0.909502, -52.5254 ), 1265.73, 0.0, 0, 0 ]

[node name="Queen" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Piece" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piece"]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
visible = false
amount = 10
lifetime = 0.7
explosiveness = 0.03
randomness = 0.45
emission_shape = 1
emission_sphere_radius = 19.6
direction = Vector2( 0, 0 )
gravity = Vector2( 0, -98 )
initial_velocity_random = 0.32
angular_velocity_random = 0.17
angular_velocity_curve = SubResource( 3 )
orbit_velocity_random = 0.22
linear_accel_random = 0.44
radial_accel_random = 0.46
tangential_accel_random = 0.67
angle_random = 0.36
scale_amount = 1.5
color = Color( 0.141176, 0.454902, 0.792157, 1 )

[connection signal="input_event" from="Piece" to="Piece" method="_on_Piece_input_event"]
[connection signal="is_dropped" from="Piece" to="." method="_on_Piece_is_dropped"]
[connection signal="is_selected" from="Piece" to="." method="_on_Piece_is_selected"]
